# playground-cuda

./: .gitignore  CMakeLists.txt  Makefile  README.md  pyproject.toml
docs/: perfetto_pytorch_extension_plan.md  perfetto_pytorch_profiler_sql.md  pytorch_ddp_performance_tuning_blog.md  pytorch_ddp_single_gpu_lab.md  pytorch_training_lab.md  pytorch_training_optimization_blog.md  pytorch_transformer_token_skew_blog.md
docs/slides/: 00_device_query.html  01_vector_add.html  02_reduce_sum.html  03_softmax.html  04_matmul.html  05_layernorm.html  06_mlp.html  07_attention.html  08_flash_attention_v1.html  09_flash_attention_v2.html  10_flash_attention_v3.html  index.html  next_levels.html
docs/slides/assets/: slides.css  slides.js
perfetto/sql/: 01_top_cpu_total.sql  02_top_self_cpu.sql  03_top_cuda_total.sql  04_top_cpu_calls.sql  05_launch_overhead.sql  06_top_gpu_kernels.sql  07_memcpy_summary.sql  08_busy_tracks.sql  09_step_local_cpu_summary.sql  10_user_annotations.sql
python/playground_cuda/: __init__.py  ddp_lab.py  ddp_lab_blog_experiments.py  device_query.py  training_lab.py  training_lab_blog_experiments.py  transformer_token_skew_blog_experiments.py  transformer_token_skew_lab.py  vector_add.py
reports/: blog_data_profile.txt  blog_kernel_ncu.txt  blog_torch_nsys_stats.txt  blog_torch_profile.txt  ddp_skew_test.json
reports/ddp_lab_blog/: barrier_ws4.json  comm_ws4.json  results.json  skew_ws4.json  strong_ws1.json  strong_ws2.json  timings.csv  weak_ws1.json  weak_ws2.json  weak_ws4.json
reports/training_lab_blog/: baseline.json  data_workers0.json  data_workers4.json  data_workers8.json  kernel_bf16.json  kernel_fp32.json  results.json  timings.csv  torch_batch1024.json  torch_eager.json
reports/transformer_token_skew_blog/: fixed_sample_ws4.json  results.json  timings.csv  variable_bucket_ws4.json  variable_sample_ws4.json  variable_token_ws4.json
src/: device_query.cu  vector_add.cu
src/cuda/: 00_device_query.cu  01_vector_add.cu  02_reduce_sum.cu  03_softmax.cu  04_matmul.cu  05_layernorm.cu  06_mlp.cu  07_attention.cu  08_flash_attention_v1.cu  09_flash_attention_v2.cu  10_flash_attention_v3.cu
src/cuda/common/: cuda_utils.cuh
src/cuda/practice/: 01_vector_add_practice.cu  02_reduce_sum_practice.cu  03_softmax_practice.cu  04_matmul_practice.cu  05_layernorm_practice.cu  06_mlp_practice.cu  07_attention_practice.cu  08_flash_attention_v1_practice.cu  09_flash_attention_v2_practice.cu  10_flash_attention_v3_practice.cu  README.md
src/cutile/: README.md
src/triton/: README.md
traces/torch_baseline/: msi_279961.1773729069147297763.pt.trace.json
traces/torch_data_workers4/: msi_298810.1773731136888005995.pt.trace.json
traces/torch_smoke2/: msi_279018.1773728967079537556.pt.trace.json
